--- a/bower.json
+++ b/bower.json
@@ -16,10 +16,7 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "leaflet": "^1.2.0",
-    "leaflet-geosearch": "^2.5.1",
     "font-awesome": "^4.7.0",
-    "mapbox.js": "^3.1.1",
-    "leaflet.markercluster": "^1.3.0"
+    "mapbox.js": "^3.1.1"
   }
 }
